--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "alertifyjs": "^1.10.0",
     "angularfire2": "^4.0.0-rc.1",
     "core-js": "^2.4.1",
     "firebase": "^4.1.2",
+    "knayi-myscript": "^2.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
